fix: wrap text in CF rules reference

--- a/webapp/IronCalc/src/components/RightDrawer/ConditionalFormatting/conditional-formatting.css
+++ b/webapp/IronCalc/src/components/RightDrawer/ConditionalFormatting/conditional-formatting.css
@@ -169,6 +169,9 @@
   font-size: 12px;
   color: var(--palette-grey-600);
   font-family: var(--typography-font-family);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ic-cf-list-item-icons {
